--- a/package.json
+++ b/package.json
@@ -72,28 +72,32 @@
     "@babel/plugin-transform-template-literals": "^7.0.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@eslint/js": "^9.12.0",
     "@testing-library/react-native": "^12.5.2",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "^29.2.1",
     "@types/react": "~18.2.14",
     "@types/react-native-push-notification": "^8.1.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "babel-jest": "^29.2.1",
-    "eslint": "8.17.0",
-    "eslint-config-prettier": "8.5.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "17.0.0",
-    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-react": "7.30.0",
-    "eslint-plugin-react-native": "4.0.0",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-native": "^4.1.0",
     "eslint-plugin-reactotron": "^0.1.2",
+    "globals": "^15.11.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
     "patch-package": "^8.0.0",
     "postinstall-prepare": "1.0.1",
-    "prettier": "2.8.8",
+    "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "reactotron-core-client": "^2.8.13",
     "reactotron-mst": "^3.1.7",
@@ -101,7 +105,8 @@
     "reactotron-react-native": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "typescript-eslint": "^8.9.0"
   },
   "engines": {
     "node": ">=18"
